--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,11 @@
               </div>
             </div>
           </div>
+          <div class="form-row">
+            <div class="col-md-12 mb-3">
+              <button id="downloadBtn" class="btn btn-primary" style="display: none;">Download Image</button>
+            </div>
+          </div>
         </form>
       </div>
     </div>
@@ -63,6 +68,7 @@
       .then(data => {
         if(data.success) {
           $('.container').prepend('<div class="alert alert-success" role="alert">' + data.message + '</div>');
+          $('#downloadBtn').attr('onclick', 'window.location.href="/download/' + data.filename + '"').show();
         } else {
           $('.container').prepend('<div class="alert alert-danger" role="alert">' + data.message + '</div>');
         }
