--- a/public/index.html
+++ b/public/index.html
@@ -56,11 +56,11 @@
     $('.custom-file-input').on('change', function() {
       var fileName = $(this).val().split('\\').pop();
       $(this).next('.custom-file-label').addClass("selected").html(fileName);
-
+  
       const formData = new FormData();
       formData.append('myImage', this.files[0]);
       formData.append('textInput', $('input[name="textInput"]').val());
-
+  
       fetch('/upload', {
         method: 'post',
         body: formData
@@ -68,7 +68,7 @@
       .then(data => {
         if(data.success) {
           $('.container').prepend('<div class="alert alert-success" role="alert">' + data.message + '</div>');
-          $('#downloadBtn').attr('onclick', 'window.location.href="/download/' + data.filename + '"').show();
+          $('#downloadBtn').attr('href', '/download/' + data.filename).show();
         } else {
           $('.container').prepend('<div class="alert alert-danger" role="alert">' + data.message + '</div>');
         }
@@ -79,6 +79,6 @@
         $('.container').prepend('<div class="alert alert-danger" role="alert">Error: ' + error.message + '</div>');
       });
     });
-  </script>
+  </script>  
 </body>
 </html>
