--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
       .then(data => {
         if(data.success) {
           $('.container').prepend('<div class="alert alert-success" role="alert">' + data.message + '</div>');
-          $('#downloadBtn').attr('href', '/download/' + data.filename).show();
+          $('#downloadBtn').attr('href', '/download/' + data.filename).attr('download', data.filename).show();
         } else {
           $('.container').prepend('<div class="alert alert-danger" role="alert">' + data.message + '</div>');
         }
