--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,9 @@
             </div>
           </div>
         </form>
+        <div id="downloadBtn" style="display: none;">
+          <!-- This is where the download button will be inserted -->
+        </div>  
       </div>
     </div>
   </div>
