--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,8 @@
         </form>
         <div id="downloadBtn" style="display: none;">
           <!-- This is where the download button will be inserted -->
-        </div>  
+        </div>
+        <button id="downloadAllBtn" class="btn btn-primary">Download All Images</button>
       </div>
     </div>
   </div>
@@ -92,6 +93,13 @@
         $('.container').prepend('<div class="alert alert-danger" role="alert">Error: ' + error.message + '</div>');
       });
     });
+    
+    // JavaScript code to handle the download button click event
+    $('#downloadAllBtn').on('click', function() {
+      // Redirect to the /download-all endpoint to trigger the download
+      window.location.href = '/download-all';
+    });
+    
   </script>    
 </body>
 </html>
