fix: button  fs this time

--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
     $('#downloadAllBtn').on('click', function() {
       // Redirect to the /download-all endpoint to trigger the download
       window.location.href = '/download-all';
-    });
+    }).show();
     
   </script>    
 </body>
