--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,10 @@
           </div>
         </form>
         <div id="downloadBtn" style="display: none;">
-          <button id="downloadAllBtn" class="btn btn-primary">Download All Images</button>
           <!-- This is where the download button will be inserted -->
+        </div>
+        <div style="margin: 2px;">
+          <button id="downloadAllBtn" class="btn btn-primary">Download All Images</button>
         </div>
       </div>
     </div>
