add: bulk download btn

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
         <div id="downloadBtn" style="display: none;">
           <!-- This is where the download button will be inserted -->
         </div>
-        <div style="margin: 2px;">
+        <div style="margin-top: 5px;">
           <button id="downloadAllBtn" class="btn btn-primary">Download All Images</button>
         </div>
       </div>
